--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -6,19 +6,26 @@ on:
 
 jobs:
   terraform:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
 
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-
       - name: Set up Terraform
         uses: hashicorp/setup-terraform@v2
         with:
           terraform_version: 1.6.0
 
       - name: Terraform Plan
-        run: terraform plan -var-file="envs/${{ github.event.client_payload.environment }}.tfvars" -out=tfplan.out
+        run: |
+          terraform plan \
+            -var-file="static.tfvars" \
+            -var-file="envs/${{ github.event.client_payload.environment }}.tfvars" \
+            -out=tfplan.out
+        working-directory: ${{ github.event.client_payload.repo_path }}
 
       - name: Terraform Apply
-        run: terraform apply -var-file="envs/${{ github.event.client_payload.environment }}.tfvars" -auto-approve
+        run: |
+          terraform apply \
+            -var-file="static.tfvars" \
+            -var-file="envs/${{ github.event.client_payload.environment }}.tfvars" \
+            -auto-approve
+        working-directory: ${{ github.event.client_payload.repo_path }}
