--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -63,6 +63,7 @@ jobs:
         run: |
           echo "📋 Running Terraform plan..."
           terraform plan \
+            -var-file="static.tfvars"\
             -var-file="envs/${{ github.event.client_payload.environment }}.tfvars" \
             -out=tfplan.out \
             -detailed-exitcode
