--- a/.github/workflows/ci-build.yml
+++ b/.github/workflows/ci-build.yml
@@ -54,8 +54,8 @@ jobs:
 
       - name: Run Bootstrap Script
         run: |
-          chmod +x ./bootstrap.sh
-          ./bootstrap.sh
+          chmod +x terraform-eks/setup-backend.sh
+          terraform/setup-backend.sh
         working-directory: terraform-eks
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
