--- a/.github/workflows/ci-build.yml
+++ b/.github/workflows/ci-build.yml
@@ -5,7 +5,7 @@ on:
 
 jobs:
   terraform:
-    runs-on: [self-hosted, linux, x64,new-runner]
+    runs-on: [self-hosted, linux, x64,sample]
 
     env:
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
